force-app/main/default/objects/Training_Task__c/Training_Task__c.object-meta.xml
<CustomObject>
    <label>Training Task</label>
    <nameField>
        <label>Training Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>