force-app/main/default/objects/Training_Task__c/fields/Expected_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_In_Minutes__c</fullName>
    <label>Expected Duration (In Minutes)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>