force-app/main/default/objects/Training_Task__c/fields/Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Task_Link__c</fullName>
    <inlineHelpText>Provides a link to the training task for ease of access</inlineHelpText>
    <label>Task Link</label>
    <type>Url</type>
</CustomField>