force-app/main/default/objects/Training_Task__c/recordTypes/Training_Task_Record.recordType-meta.xml
<RecordType>
    <fullName>Training_Task_Record</fullName>
    <active>true</active>
    <label>Training Task Record</label>
</RecordType>