force-app/main/default/objects/Training_Task__c/validationRules/Trailhead_Module_Is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Trailhead_Module_Is_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL( Task_Type__c , &apos;Module&apos;) ,ISPICKVAL( Task_Type__c , &apos;Trail&apos;)), ISBLANK( Trailhead_Points__c ) )</errorConditionFormula>
    <errorMessage>Task is a Module/Trail and thus must have trailhead points associated.</errorMessage>
</ValidationRule>