force-app/main/default/objects/Training_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Duration_In_Minutes__c</columns>
    <columns>Task_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>